tests/rename/should_fail/SimilarNamesImport.hs
module SimilarNamesImport where

import SimilarNamesImport_aux ( dyzzy, Wabble, wabble, Trizzle(bizzy) )
